--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
-  font-family: monospace;
+  font-family: Verdana,'Times New Roman', sans-serif;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
 }
 
 .logo {
@@ -8,18 +12,26 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 16px 32px;
+  margin: 12px;
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 1em;
+  align-items: center;
+  flex: 1;
+  
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 16px;
   /* this removes the line under the links */
   text-decoration: none;
+
 }
