--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  /* display: flex;
+  padding: 8px;
+  align-items: center; */
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +26,9 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  display: flex;
+  margin-right: 16px;
+  margin-left:8px;
 }
 
 .logo {
@@ -27,6 +36,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  display: flex;
+  margin-left: 16px;
+  margin-right: 8px;
 }
 
 button {
@@ -35,14 +47,32 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  /* display: flex;
+  margin-left: auto;
+  align-items: center;
+  margin-top: 8px;
+  margin-bottom: 8px; */
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  
 }
 
 ul {
   list-style-type: none;
+  /* display: flex;
+  gap: 1em; */
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
